Fix Layout overflow issue on laptop devices

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 100vh;
   padding: 0.5rem 0;
+  overflow: hidden;
 
   .Main {
     padding-top: 4rem;
